--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -22,6 +22,6 @@ jobs:
         with:
           github-token: ${{ secrets.TOKEN }}
           date: ${{ github.event.inputs.date }}
-          workflow: 'basic.yml'
+          workflow: 'main.yml'
           timezone: 'US/Eastern' # US/Central, US/Pacific
           wait-ms: 45000
